--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -35,7 +35,7 @@ a {
 }
 
 .theme--dark.v-sheet {
-  background-image: radial-gradient(circle at -39% -55%, #1f1f98, #50e3d4 112%);
+  // background-image: radial-gradient(circle at -39% -55%, #1f1f98, #50e3d4 112%);
 }
 
 .height-90 {
