--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -52,7 +52,7 @@ $breakpoints: (
 $base-url: '/assets/' !default;
 
 // Temporarely -- to be deleted ----------------
-$primary: #1976d2;
+$primary: #4397cb;
 $bgColor: #fafbfb;
 $pink: #fa71cd;
 $edit: rgb(0, 174, 255);
@@ -66,7 +66,7 @@ $color-bale: #eee;
 $color-light: #d4d4d4;
 $color-dark: #2e384d;
 $color-darker: #21252e;
-$color-gray: #afafaf;
+$color-gray: #909497;
 $color-bg: #f4f8f9;
 $color-gray-header: #94979b;
 $color-highlight: rgba(58, 132, 255, 0.05);
@@ -97,7 +97,7 @@ $color-header: #e0e0e050;
 $color-expansion-panel-bg: #e0e0e035;
 $color-close: #9e9e9e;
 $color-file-upload: #00000038;
-
+$color-gold: #f5c007;
 // STATUS COLORS
 $color-status-delivered: #5af662;
 $color-status-canceled: #ff913c;
@@ -113,7 +113,7 @@ $box-shadow: 0 0 30px 0 rgba(76, 147, 230, 0.1);
 
 //fonts
 $font-light: 'Font Light';
-$font-regular: 'Font Regular';
+$font-regular: 'Poppins';
 $font-medium: 'Font Medium';
 $font-bold: 'Font Bold';
 $font-bolder: 'Font Bolder';
