--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -64,7 +64,7 @@ $color-black: #000;
 $color-white: #fff;
 $color-bale: #eee;
 $color-light: #d4d4d4;
-$color-dark: #2e384d;
+$color-dark: #272e31;
 $color-darker: #21252e;
 $color-gray: #909497;
 $color-bg: #f4f8f9;
