--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -39,8 +39,8 @@ a {
 }
 
 .height-90 {
-    max-height: 70vh;
-    overflow: auto;
+  max-height: 70vh;
+  overflow: auto;
 }
 * {
   font-family: $font-regular;
@@ -48,6 +48,16 @@ a {
 .gold-icon {
   color: $color-gold !important;
 }
-.delete, .edit {
+.delete,
+.edit {
   cursor: pointer;
+}
+.teams-icon {
+  border-radius: 50%;
+  /* padding: 14px; */
+  height: 50px;
+  width: 50px;
+  color: #0088c3 !important;
+  background-color: #d6eaf4;
+  margin-right: 1rem;
 }
