--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -53,6 +53,7 @@ $base-url: '/assets/' !default;
 
 // Temporarely -- to be deleted ----------------
 $primary: #4397cb;
+$secondary: #0088c3;
 $bgColor: #fafbfb;
 $pink: #fa71cd;
 $edit: rgb(0, 174, 255);
