camp create success

--- a/src/assets/scss/components/_public.scss
+++ b/src/assets/scss/components/_public.scss
@@ -67,7 +67,7 @@ body {
 .v-input--is-label-active {
   .v-input__slot {
     background-color: white;
-    border: 1px solid $primary;
+    // border: 1px solid $primary;
   }
 }
 .main-header {
