--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -68,7 +68,7 @@ a {
 }
 .form-box {
   .v-input__slot {
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     padding-left: 10px;
