--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -65,10 +65,11 @@ $color-black: #000;
 $color-white: #fff;
 $color-bale: #eee;
 $color-light: #d4d4d4;
-$color-dark: #272e31;
+$color-dark: #43425d;
 $color-darker: #21252e;
 $color-gray: #909497;
-$color-bg: #f4f8f9;
+$color-bg: #f8f8fb;
+$color-th: #43425d;
 $color-gray-header: #94979b;
 $color-highlight: rgba(58, 132, 255, 0.05);
 $color-v-list-key: #21252e;
@@ -99,6 +100,7 @@ $color-expansion-panel-bg: #e0e0e035;
 $color-close: #9e9e9e;
 $color-file-upload: #00000038;
 $color-gold: #f5c007;
+$color-active: #ffc53d;
 // STATUS COLORS
 $color-status-delivered: #5af662;
 $color-status-canceled: #ff913c;
@@ -120,6 +122,7 @@ $font-bold: 'Font Bold';
 $font-bolder: 'Font Bolder';
 
 // Heights
+$size-20: 20px;
 $h-form-input: 64px;
 $h-button-md: 3rem;
 $h-table-row: 72px;
