--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -88,3 +88,10 @@ a {
 .h-80 {
   min-height: 80vh;
 }
+.global-card {
+  border-radius: 10px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08);
+  h3 {
+    color: $color-dark;
+  }
+}
