--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -21,6 +21,12 @@ html {
   box-sizing: inherit;
 }
 
+@media(min-width: 1904px) {
+  .container {
+    max-width: 1440px !important;
+  }
+}
+
 /**
  * Basic styles for links
  */
@@ -68,7 +74,7 @@ a {
 }
 .form-box {
   .v-input__slot {
-    // background-color: #f2f2f2;
+    background-color: #f2f2f2;
     border-top-right-radius: 7px;
     border-top-left-radius: 7px;
     padding-left: 10px;
@@ -93,5 +99,31 @@ a {
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08);
   h3 {
     color: $color-dark;
+  }
+}
+.dates {
+  .v-input__append-inner {
+    margin-top: 9px !important;
+    margin-right: 6px;
+  }
+}
+.theme--light.v-icon {
+  color: silver !important;
+}
+.transparent-field {
+  .v-input--is-label-active {
+    .v-input__slot {
+      background-color: transparent !important;
+    }
+  }
+  .v-input__slot {
+    background-color: transparent !important;
+  }
+  .v-input__icon--append {
+    margin-top: 8px;
+    margin-right: 8px;
+    i {
+      color: $primary !important;
+    }
   }
 }
