--- a/src/assets/scss/components/_public.scss
+++ b/src/assets/scss/components/_public.scss
@@ -66,7 +66,7 @@ body {
 }
 .v-input--is-label-active {
   .v-input__slot {
-    background-color: white;
+    background-color: #f2f2f2;
     // border: 1px solid $primary;
   }
 }
