--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -108,7 +108,7 @@ a {
   }
 }
 .theme--light.v-icon {
-  color: silver !important;
+  // color: silver !important;
 }
 .transparent-field {
   .v-input--is-label-active {
